--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
       href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@100;300&display=swap"
       rel="stylesheet"
     />
-    <title>ArtByMel</title>
+    <title>ArtistryByMel</title>
   </head>
   <body>
     <div id="root"></div>
