--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
       href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@100;300&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <title>ArtistryByMel</title>
   </head>
   <body>
