--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,11 @@
   </head>
   <body>
     <div id="root"></div>
+    <form name="contact" netlify hidden>
+      <input type="text" name="name" />
+      <input type="email" name="email" />
+      <textarea name="message"></textarea>
+    </form>
     <script
       type="module"
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
