--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
     <form name="contact" netlify hidden>
       <input type="text" name="name" />
       <input type="email" name="email" />
+      <input type="tel" name="phone" />
       <textarea name="message"></textarea>
     </form>
     <script
