Debugging netlify form handling

--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <form name="contact" netlify hidden>
+    <form name="contactForm" netlify hidden>
       <input type="text" name="name" />
       <input type="email" name="email" />
       <input type="tel" name="phone" />
